# fastapi-mongo-chat

./: .env.example  .pre-commit-config.yaml  main.py  pyproject.toml
app/core/: config.py  database.py
app/dao/: user_dao.py
app/infrastructure/: mongo.py
app/models/: chat.py  message.py  user.py
