[project]
name = "hope-i-will-finish-thos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.29.0",
    "celery>=5.5.2",
    "fastapi>=0.115.12",
    "pika>=1.3.2",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.13.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
